# nexus

./: .audit-allowlist.json  .env.example  .gitignore  AGENTS.md  README.md  electron-builder.yml  package-lock.json  package.json
.github/: dependabot.yml
.github/workflows/: backend-quality.yml  daemon-quality.yml  dependency-audit.yml  frontend-quality.yml  glasses-quality.yml  integration.yml
.superpowers/sdd/: task-15-brief.md
docs/: usage-stats.md
electron/: main.ts  package.json  preload.js  splash.html
project_docs/design/: 2026-06-24-chat-session-persistence.md  2026-06-26-activity-filtered-status-results.md  2026-06-26-daemon-toast-acknowledgement.md  2026-06-29-session-branch-awareness-icons.md  2026-06-30-local-model-health-and-curation.md  2026-06-30-remote-memory-session-archive.md  2026-07-08-chat-markdown-rendering-design.md  2026-07-08-local-vision-capability.md  2026-07-16-mission-control-usage-empty-state.md  2026-07-18-pi-model-runtime-migration.md  (+9 more)
scripts/: after-pack.cjs  audit-allowlist.mjs  check-esm-dist.cjs  dist-macos.sh  ensure-sqlite-abi.cjs  fetch-node-runtime.cjs  fix-node-pty-permissions.cjs  migrate-chats-to-zosma.cjs  prune-foreign-natives.cjs  restart-backend.sh  sign-nested-binaries.sh  stage-services.cjs
tauri/: package.json  splash.html
tauri/src-tauri/: .gitignore  Cargo.toml  entitlements.plist  tauri.conf.json
tauri/src-tauri/capabilities/: default.json
tauri/src-tauri/src/: app_mode.rs  health.rs  lib.rs  main.rs  node.rs  server_control.rs  server_tray.rs  supervisor.rs
tauri/src-tauri/tests/: process_group.rs
(+532 files in other folders)
